Fixing images, spacing

--- a/app/assets/stylesheets/store/spree_reviews.css
+++ b/app/assets/stylesheets/store/spree_reviews.css
@@ -54,6 +54,7 @@ div.rating-cancel, div.star-rating {
   float: left;
   width: 19px;
   height: 19px;
+  padding-right: 2px;
   text-indent: -999em;
   cursor: pointer;
   display: block;
